@@ -1,3 +1,6 @@
+2006-10-11  Brian Matherly  <brian@gramps-project.org>
+	* src/Mime/_WinMime.py: potential fix for #446
+
 2006-10-10  Alex Roitman  <shura@gramps-project.org>
 	* configure.in: Update version number.
 	* NEWS: Update.
